fixed sizing issues on mobile screen size

--- a/assets/css/_button.scss
+++ b/assets/css/_button.scss
@@ -3,6 +3,7 @@
   background: $veryDarkCyan;
   border-radius: 5px;
   padding: 12px;
+  width: 39vw;
   
 }
 
