--- a/assets/css/_mixins.scss
+++ b/assets/css/_mixins.scss
@@ -29,6 +29,7 @@
   font-weight: 700;
   text-align: $textDir;
   padding: 10px 0px;
+  width: 84vw;
 
   
   
